--- a/shop/index.html
+++ b/shop/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<p> 여기는 SHOP 페이지입니다. </p>
+		<p> 여기는 SHOP PAGE 입니다. </p>
 		<p><a href="../index.html">돌아가기</a></p>
 	</body>
 </html>
